# LingHacks

./: .gitignore  Dockerfile.backend  GEMINI.md  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  smartcart-demo.html  test_rpa_fallback.py
app/: __init__.py  api.py  main.py  schemas.py
app/core/: __init__.py  config.py
app/db/: __init__.py  graph.py
app/services/: __init__.py  agent_review.py  claim_extraction.py  controversy_gnn.py  document_encoder.py  ensemble_review.py  file_store.py  graph_builder.py  landscape_service.py  llm_adapters.py  output_layer.py  paper_service.py  relational_analysis.py  semantic_evolution.py
data/: paper_registry.json  uploads.db
data/landscapes/: 203f758b-fea2-46b0-9ef5-7fb6411879be.json  9273fa06-944d-496c-8195-c22cccf8f80c.json
data/processed/: ae9d26fd-9b39-4e40-889d-6031a7f9b6d1.json  b6cf551f-3950-4aca-95a7-73eb67838b20.json  b796ae9b-4822-44f3-9a33-e39caa25ff91.json  b94350d5-b5f0-4f43-a445-5a173a0a74ee.json  d8062802-1f22-47ab-85df-bac83981bab3.json  dc2fc59f-2be5-4036-98ad-4c39b65d2cce.json  e91b66ff-c2e7-4500-9427-fc8f29479c6e.json
data/uploads/: 20260614132939__d5ra09926a.pdf.meta.json  20260614134145__1-s2.0-S0141813025075518-main.pdf.meta.json
frontend/: .dockerignore  Dockerfile.frontend  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  RPAPage.jsx  api.js  index.css  main.jsx
frontend/src/components/rpa/: ClaimTable.jsx  InsightPanel.jsx  MetricCard.jsx  PaperReader.jsx  (+1 more)
frontend/src/data/: mockData.js
(+1 files in other folders)
