[project]
name = "linghacks-scientific-reasoning-backend"
version = "0.1.0"
description = "Multi-stage scientific reasoning backend for controversy graph extraction."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.114.0"
uvicorn = "^0.25.0"
torch = "^2.1.0"
transformers = "^4.35.0"
sentence-transformers = "^2.3.0"
pydantic = "^2.9.0"
neo4j = "^6.0.0"
python-multipart = "^0.0.6"
httpx = "^0.27.0"
pdfminer.six = "^20240528"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.4"
torch-geometric = "^2.5.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
pyarrow = "^14.0.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"